refactor: improve code quality, memory management, and security
- Extract common processReferences() method in ClaudeSession to reduce code duplication
- Use WeakHashMap in TerminalMonitorService and RunConfigMonitorService to prevent memory leaks
- Add sensitive data sanitization in ClaudeSDKBridge to protect API keys and tokens in logs
- Improve thread safety in QuickFixWithClaudeAction using ConcurrentLinkedDeque
- Make Terminal plugin dependency optional for better IDE compatibility
- Refactor TerminalMonitorService methods for better readability and maintainability
- Change verbose LOG.info to LOG.debug to reduce log noise

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>